new recipe and better formatting laid out

--- a/src/content/recipes/chicken-birria-tacos/index.mdx
+++ b/src/content/recipes/chicken-birria-tacos/index.mdx
@@ -1,11 +1,13 @@
 ---
 title: Chicken Birria Tacos
 description: Succulent chicken tacos with rich consommé for dipping
+image: ./Chicken-Birria-Tacos4.jpg
 tags: [mexican, chicken, tacos, dinner]
 servings: 6
 caloriesPerServing: 475
 prepTime: 20
 cookTime: 90
+notes: This is where some notes about hte recipe would go, replace x with y and such
 ingredients:
   - name: Onion
     amount: 1
@@ -62,11 +64,6 @@ ingredients:
     amount: 2
     unit: limes
 ---
-
-import { Image } from "astro:assets";
-import recipeImage from "../../assets/recipe-images/Chicken-Birria-Tacos4.jpg";
-
-<Image src={recipeImage} alt="A rocketship in space." />
 
 1. Combine chicken with vegetables, chiles, and spices in a large pot. Bring to a boil over medium-high heat.
 2. Reduce heat, cover, and simmer for 30 minutes.
